Partie 5 - Exercice 4 non OK.

--- a/Partie 5 - Les évènements et la manipulation du DOM/Exercice_4/Assets/CSS/Style.css
+++ b/Partie 5 - Les évènements et la manipulation du DOM/Exercice_4/Assets/CSS/Style.css
@@ -1,3 +1,20 @@
-body {
-    height: 100vh;
+h1 {
+    color: rebeccapurple;
+    font-size: 50px;
+    font-weight: bold;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 3em;
+    margin-top: 3em;
+    width: 800px;
+    border: rebeccapurple solid 3px;
+}
+.container {
+    width: 100vh;
+    display: flex;
+    justify-content: center;
+}
+img {
+    width: 200px;
+    height: 360px;
 }
