--- a/Partie 6 - Les boucles/Exercice_1/Assets/CSS/Style.css
+++ b/Partie 6 - Les boucles/Exercice_1/Assets/CSS/Style.css
@@ -1,3 +1,25 @@
-body {
-    height: 100vh;
+h1 {
+    text-align: center;
+    color: CornflowerBlue;
+    font-weight: bold;
+    margin-top: 3em;
+    margin-bottom: 2em;
+    text-transform: uppercase;
+}
+
+table, th, td {
+    margin: auto;
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+th {
+    text-transform: uppercase;
+    font-size: 30px;
+    padding: 1rem;
+}
+
+td {
+    font-size: 22px;
 }
