--- a/Partie 8 - Les animations/Exercice_1_bis/Assets/CSS/Style.css
+++ b/Partie 8 - Les animations/Exercice_1_bis/Assets/CSS/Style.css
@@ -1,11 +1,34 @@
-/* html{
-    scroll-behavior: smooth;
-}
-*/
-
 #scrollTop {
     display: block;
     width: 50px;
     height: 50px;
-    background-color: salmon;
+    background-color: lightcoral;
+    border-radius: 50%;
+    margin-left: auto;
+    position: relative;
+    right: 5%;
+    bottom: 20px;
+}
+
+#scrollTop:hover {
+    background-color: coral;
+}
+
+.arrow {
+    font-size: 2.5em;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.arrow-animation {
+    animation: 1s infinite alternate arrow cubic-bezier(0.790, 0.150, 0.180, 0.750);
+}
+
+@keyframes arrow {
+    to {
+        top: 60%;
+    }
 }
