Partie 9 - Exercice 2 finalisé.

--- a/Partie 9 - Les librairies/Exercice_2/Assets/CSS/Style.css
+++ b/Partie 9 - Les librairies/Exercice_2/Assets/CSS/Style.css
@@ -1,13 +1,14 @@
 h1 {
     font-family: garamond;
     font-size: 40px;
-    margin-left: 30px;
+    text-align: center;
+    padding: 23px;
 }
 
 p {
     font-family: garamond;
     font-size: 23px;
-    margin: 30px;
+    margin-left: 813px;
 }
 
 
